--- a/index.html
+++ b/index.html
@@ -39,49 +39,49 @@
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i class="fa fa-hand-holding"></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Borrow loan</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i class="fas fa-money-check"></i>
+                          <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Credit score</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                         <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Group</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <a href="">Create Group</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                         <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Payloan</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <a href="">Members</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Register member</a>
                 </div>
                  <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                        <i></i>
+                          <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Contributions</a>
                 </div>
