--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/fontawesome-free-5.0.1/css/fontawesome-all.css">
 </head>
+
 <body>
     <div class="dashboard">
         <div class="top-navbar">
@@ -17,7 +19,7 @@
             </div>
             <div class="search">
                 <input type="text" placeholder="search your loan history">
-            <i class="fa fa-search"></i>
+                <i class="fa fa-search"></i>
             </div>
             <div class="account">
                 <div class="message-iocn">
@@ -37,56 +39,113 @@
                     </div>
                     <a href="">Home</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
                         <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Borrow loan</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                          <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Credit score</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                         <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Group</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
                         <i class="fa fa-users"></i>
                     </div>
                     <a href="">Create Group</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                         <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Payloan</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
                         <i class="fa fa-users"></i>
                     </div>
                     <a href="">Members</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
                         <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Register member</a>
                 </div>
-                 <div class="sidebar-item">
+                <div class="sidebar-item">
                     <div class="sidebar-item-icon">
-                          <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </div>
                     <a href="">Contributions</a>
                 </div>
             </div>
+            <div class="body-table-loan">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Contributions</th>
+                            <th>Loan credited</th>
+                            <th>Loan Limit</th>
+                            <th>Contributions date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="priority-200">
+                            <td>Elijah Kris</td>
+                            <td>300</td>
+                            <td> 200</td>
+                            <td>190</td>
+                            <td>3/06/2021</td>
+
+                        </tr>
+                        <tr class="priority-230">
+                            <td>Elijah Kris</td>
+                            <td>300</td>
+                            <td> 200</td>
+                            <td>190</td>
+                            <td>3/06/2021</td>
+
+                        </tr>
+                        <tr class="priority-240">
+                            <td>Elijah Kris</td>
+                            <td>300</td>
+                            <td> 200</td>
+                            <td>190</td>
+                            <td>3/06/2021</td>
+
+                        </tr>
+                        <tr class="priority-250">
+                            <td>Elijah Kris</td>
+                            <td>300</td>
+                            <td>200</td>
+                            <td>190</td>
+                            <td>3/06/2021</td>
+
+                        </tr>
+                        <tr class="priority-300">
+                            <td>Elijah Kris</td>
+                            <td>300</td>
+                            <td> 200</td>
+                            <td>190</td>
+                            <td>3/06/2021</td>
+
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
         </div>
     </div>
 </body>
+
 </html>
